force-app/main/default/objects/iManage__mdt/iManage__mdt.object-meta.xml
<CustomObject>
    <label>iManage</label>
    <pluralLabel>iManage</pluralLabel>
</CustomObject>