force-app/main/default/objects/iManage__mdt/fields/IsDocuSign__c.field-meta.xml
<CustomField>
    <fullName>IsDocuSign__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsDocuSign</label>
    <type>Checkbox</type>
</CustomField>