force-app/main/default/objects/iManage__mdt/fields/IsDocuSignToiManage__c.field-meta.xml
<CustomField>
    <fullName>IsDocuSignToiManage__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsDocuSignToiManage</label>
    <type>Checkbox</type>
</CustomField>