force-app/main/default/objects/iManage__mdt/fields/IsEmail__c.field-meta.xml
<CustomField>
    <fullName>IsEmail__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsEmail</label>
    <type>Checkbox</type>
</CustomField>