force-app/main/default/objects/iManage__mdt/fields/IsSDocs__c.field-meta.xml
<CustomField>
    <fullName>IsSDocs__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsSDocs</label>
    <type>Checkbox</type>
</CustomField>